--- a/src/assets/styles/global-styles.less
+++ b/src/assets/styles/global-styles.less
@@ -1,11 +1,10 @@
+@import './tailwind.less';
+
 html, body, #root {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+    @apply h-full p-0 m-0 box-border;
 }
 
 #app-container {
-    height: 100%;
+    @apply h-full;
     background-color: rgb(40, 44, 52);
 }
