--- a/src/components/Home/Home.module.less
+++ b/src/components/Home/Home.module.less
@@ -1,23 +1,17 @@
 .home {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @apply h-full flex flex-col items-center justify-center;
 }
 
 .imgBox {
     overflow: hidden;
     width: 400px;
     height: 400px;
-}
-
-.imgBox img {
-    width: 100%;
-    height: 100%;
+    & img {
+        @apply w-full h-full;
+    }
 }
 
 .title {
-    color: #fff;
+    @apply text-white;
     font-size: 50px;
 }
