--- a/src/assets/styles/global-styles.css
+++ b/src/assets/styles/global-styles.css
@@ -1,11 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body, #root {
     height: 100%;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-#app-container {
-    height: 100%;
-    background-color: rgb(40, 44, 52);
 }
