--- a/src/assets/styles/global-styles.css
+++ b/src/assets/styles/global-styles.css
@@ -2,9 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #root {
+html,
+body,
+#root {
     height: 100%;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.btnPrimary {
+    @apply px-3 py-2 hover:bg-slate-500 hover:text-white border rounded shadow-md;
 }
